# topicks

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  TopQueue_8hpp.html  TopQueue_8hpp__dep__incl.map  TopQueue_8hpp__dep__incl.md5  TopQueue_8hpp__incl.map  TopQueue_8hpp__incl.md5  TopQueue_8hpp_source.html  annotated.html  classes.html  classtopicks_1_1TopQueue-members.html  classtopicks_1_1TopQueue.html  dir_6a3fcad43d496c349d6be034aeb5d688.html  dir_a557acfb44758846645a06c9727248c7.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacetopicks.html  pick__top__genes_8hpp.html  pick__top__genes_8hpp__dep__incl.map  pick__top__genes_8hpp__dep__incl.md5  pick__top__genes_8hpp__incl.map  pick__top__genes_8hpp__incl.md5  pick__top__genes_8hpp_source.html  structtopicker_1_1PickTopGenesOptions-members.html  structtopicker_1_1PickTopGenesOptions.html  structtopicks_1_1PickTopGenesOptions-members.html  structtopicks_1_1PickTopGenesOptions.html  structtopicks_1_1TopQueueOptions-members.html  structtopicks_1_1TopQueueOptions.html  topicker.tag  topicker_8hpp.html  topicker_8hpp__incl.map  topicker_8hpp__incl.md5  (+6 more)
docs/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js
include/topicker/: topicker.hpp
include/topicks/: TopQueue.hpp  pick_top_genes.hpp  topicks.hpp
tests/: CMakeLists.txt
tests/src/: TopQueue.cpp  pick_top_genes.cpp  topicker.cpp  topicks.cpp
